##############################################################################
# CMake
##############################################################################

cmake_minimum_required(VERSION 2.8.3)
project(catkin_restful)

##############################################################################
# Catkin
##############################################################################

find_package(catkin REQUIRED)
catkin_package()

##############################################################################
# Installs
##############################################################################

install(DIRECTORY api DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION})

